--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 \usepackage{chngcntr}
 \counterwithout{equation}{chapter} %licznik numeru rownan
 \counterwithin*{equation}{chapter}
-\counterwithout{figure}{chapter}   %licznik numeru zdjec
+%\counterwithout{figure}{chapter}   %licznik numeru zdjec
 
 
 
@@ -31,6 +31,7 @@
 \begin{document}
     \tableofcontents
     \addcontentsline{toc}{section}{Contents}
+    \listoffigures
 	   
     \clearpage
     
