Zakomentowane wszystkie polecenia \line w rozdziałach 12,13 i 14. Były one powodem błędów kompilacji.

--- a/ch12/ch12.tex
+++ b/ch12/ch12.tex
@@ -660,7 +660,7 @@ and that only in one dimension are radially symmetric waves possible without los
 of intensity, we refer the reader to the article (with a rather presumptuous title) by 
 Morley [Mor-85] and [Mor-86].  
 \\
-\line(1,0){\textwidth}
+% \line(1,0){\textwidth}
 \subsubsection{EXERCISES 12.1:}
 
 
@@ -1825,7 +1825,7 @@ MATLAB's default colormap is set up so that highest values of the graph are colo
 (hot) and lowest values are colored blue (cold). The movie must be seen!}}
 	\label{pfig:ch12_18}
 \end{figure}
-\line(1,0){\textwidth}
+%\line(1,0){\textwidth}
 \subsubsection{EXERCISES 12.2:}
 
 \begin{enumerate}
@@ -2839,7 +2839,7 @@ where $0 \leqslant \sigma \leqslant 1$ , includes as special cases the explicit 
 \end{equation}
 There are other approaches to stability theory of finite difference methods. One of these, known as the spectral method, looks at eigenvalues of matricesassociated with the finite difference methods. The exercises will delve deeper into stability theory. Some references include [Smi-85], [RiMo-67], and [IsKe-66] and the more elementary [DuCZa-89].
 
-\line(1,0){\textwidth}
+% \line(1,0){\textwidth}
 \subsubsection{EXERCISES 12.3 }
 
 \textit{NOTE: For convenience in these exercises, we will refer to the forward-time central-space method (44) simply as the "explicit method" and the backward-time central-space method as the "implicit method."} 
