--- a/ch13/ch13.tex
+++ b/ch13/ch13.tex
@@ -943,7 +943,7 @@ indeed sparse.
 Can the reader explain the isolated four markers in the upper-right and lower-left 
 of Figure 13.19? 
 \\
-\line(2,0){\textwidth}
+%\line(2,0){\textwidth}
 \\
 \textbf{EXERCISES 13.2}
 \begin{enumerate}
@@ -3040,8 +3040,9 @@ having the indicated boundary data of (a). The triangulation used had 2655 nodes
 	\centering
 	\label{pfig:ch13_31}
 \end{figure}
-\line(2,0){\textwidth}
-\\
+%\line(2,0){\textwidth}
+%\\
+
 \textbf{EXERCISES 13.3}
 \begin{enumerate}
 	\item (a) Using the exact method of Example 13.5 (with Exercise for the Reader 13.4), solve the 
