--- a/ch15/ch15.tex
+++ b/ch15/ch15.tex
@@ -15,7 +15,7 @@ on the next line. In an actual MATLAB session, (long) compound commands should e
 single line, or three periods (...) should be entered after a line to hold offMATLAB's execution until 
 the rest of the command is entered on subsequent lines and the ENTER key is pressed. The text 
 explains these and other related concepts in greater detail. \\
-\line(2,0){\textwidth}\\
+% \line(2,0){\textwidth}\\
 \\
 \textbf{CHAPTER 1: MATLAB BASICS }\\
 \\
@@ -28,7 +28,7 @@ explains these and other related concepts in greater detail. \\
 \textbf{\underline{EFR 1.3:}} Simply run the code through MATLAB to see if you analyzed it correctly.
 \\
 \\ 
-\line(2,0){\textwidth}\\
+% \line(2,0){\textwidth}\\
 \\
 \textbf{CHAPTER 2: BASIC CONCEPTS OF NUMERICAL ANALYSIS WITH 
 TAYLOR'S THEOREM }
@@ -87,7 +87,7 @@ $$
 In each case, $p_{10}$(x) consists of all of the terms listed on the right-hand sides. 
 \\
 \\
-\line(2,0){\textwidth}\\
+%\line(2,0){\textwidth}\\
 \textbf{CHAPTER 3: INTRODUCTION TO M-FILES }\\
 \\
 \textbf{\underline{EFR 3.1}} : In the left box we give the stored M-file; in the right we give the subsequent MATLAB session. 
@@ -184,7 +184,7 @@ Let's do a quality check: \texttt{>> wiggly (xcross)-xcross/2}
 \texttt{->ans = 2.185751579730777e-016 (Very Good!) }
 \\
 \\
-\line(2,0){\textwidth}\\
+%\line(2,0){\textwidth}\\
 \textbf{CHAPTE R 4 : PROGRAMMIN G IN MATLA B }
 \\
 \\
@@ -345,7 +345,7 @@ many times, it should turn out (from basic probability) that Alfredo and Laurie 
 \\
 \\
 \\
-\line(2,0){\textwidth}\\
+%\line(2,0){\textwidth}\\
 \textbf{CHAPTER 5: FLOATING POINT ARITHMETIC AND ERROR 
 ANALYSIS }
 \\
@@ -419,7 +419,7 @@ end
 >> abs(pi-Sum) 
 ->ans = 4.999999969612645e-008 (exact error of approximation)
 \end{lstlisting}
-\line(2,0){\textwidth}\\
+%\line(2,0){\textwidth}\\
 \textbf{CHAPTER 6: ROOTFINDING} 
 \\
 \\
@@ -596,7 +596,7 @@ this method performs reasonably well. If the order is known, however, the newton
 better choice. 
 \\
 \\
-\line(2,0){\textwidth}\\
+%\line(2,0){\textwidth}\\
 \textbf{CHAPTER 7: MATRICES AND LINEAR SYSTEMS }
 \\
 \\
