--- a/ch15/ch15.tex
+++ b/ch15/ch15.tex
@@ -1175,11 +1175,36 @@ end
 \end{lstlisting}
 Along with the expected output, we also got some warnings from MATLAB that the matrix is either 
 singular or poorly conditioned (to be expected). The output is summarized in the following table: 
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\linewidth]{46}
-    \label{pfig:ch13_46}
-\end{figure}
+
+
+
+%\begin{figure}[H]
+%    \centering
+%    \includegraphics[width=1\linewidth]{46}
+%    \label{pfig:ch13_46}
+%\end{figure}
+
+
+$$
+\begin{array}{|l|ccc|} 
+\hline
+& \begin{array}{l}
+\text { Computer Time: } \\
+n=20 / n=30
+\end{array} & \begin{array}{l}
+\text { Flop Count: } \\
+n=20 / n=30
+\end{array} & \begin{array}{c}
+\text { Percentage of Maximum Error: } \\
+n=20 / n=30
+\end{array} \\
+\hline \text { Method 1: } & 0 / 0 \text { seconds } & 10,339 / 27,481 & 0 \% / 0 \% \\
+\text { Method 2: } & 0 / 0.01 \text { seconds } & 20,312 / 63,509 & 512.5 \% / 5400 \% \\
+\hline
+\end{array}
+$$
+
+
 \textbf{Note:} The errors may vary depending on which version of MATLAB you are using. 
 (c) The errors with Method 1 turn out to be undetectable as n runs well over 1000. The computation 
 times become more of a problem than the errors. MATLAB's "left divide" is based on Gaussian 
@@ -1272,11 +1297,26 @@ B(j, :)=c*A(i, :)+A(j, :) ;
 (with lightning speed) with a flop count of 104 (if you have access to Version 5). In the table below, 
 we give the corresponding data for the linear systems of parts (a) and (b) of EFR 7.16 (compare with 
 the table in the solution ofthat exercise):
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1\linewidth]{47}
-    \label{pfig:ch13_47}
-\end{figure} 
+
+$$
+\begin{array}{|l|lcc|}
+\hline & \begin{array}{l}
+\text { Computer Time: } \\
+n=20 / n=30
+\end{array} & \begin{array}{c}
+\text { Flop Count: } \\
+n=20 / n=30
+\end{array} & \begin{array}{c}
+\text { Percentage of Maximum Error: } \\
+n=20 / n=30
+\end{array} \\
+\cline { 2 - 4 } \text { Program } & 0.03 / 0.06 \text { seconds } & 9,906 / 31,201 & 0 \% / 0 \% \\
+\hline 7.6 & & & \\
+\hline
+\end{array}
+$$
+
+
 We observe that the time is detectable, although it was not when we used MATLAB's "left divide". 
 Similarly, if we solve the larger systems of part (c) of EFR 7.16, we still get 0\% errors for large values 
 of n, but the times needed for \texttt{gausseiim} to do the job are much greater than they were for "left 
@@ -2897,9 +2937,32 @@ $$
 we can write the 16 equations for the 16 unknown functional values; here are several of them (refer to the figure on the right):
 
 Examining this linear system shows that the coefficient matrix $A$ of the linear system to be solved $(A U=C)$ has exactly the same form as the one in the solution of Example 11.5, except now its size is $16 \times 16$. As in (19), we introduce vectors $L, R, B$, and $T$ for the boundary data. It is also convenient to\\
-\begin{center}
-\includegraphics[scale=0.8]{fig20}
-\end{center}
+
+
+$$
+\begin{array}{||l|l||}
+\hline \begin{array}{l}
+\text { Interior } \\
+\text { vertex }
+\end{array} & \begin{array}{l}
+\text { Linear equation } \\
+\text { [unknowns] }=[\mathrm{knowns}]
+\end{array} \\
+\hline P_{1} & 4 U_{1}-U_{2}-U_{5}=-h^{2} q_{1,4}+u_{0,4}+u_{1,5} \\
+\hline P_{2} & 4 U_{2}-U_{3}-U_{1}-U_{6}=-h^{2} q_{2,4}+u_{2,5} \\
+\hline P_{3} & 4 U_{3}-U_{4}-U_{2}-U_{7}=-h^{2} q_{3,4}+u_{3,5} \\
+\hline P_{4} & 4 U_{4}-U_{3}-U_{8}=-h^{2} q_{4,4}+u_{5,4}+u_{4,5} \\
+\hline P_{5} & 4 U_{5}-U_{6}-U_{1}-U_{9}=-h^{2} q_{1,3}+u_{0,3} \\
+\hline P_{6} & 4 U_{6}-U_{7}-U_{5}-U_{2}-U_{10}=-h^{2} q_{2,3} \\
+\hline \vdots & \vdots \\
+\hline P_{13} & 4 U_{13}-U_{14}-U_{9}=-h^{2} q_{1,1}+u_{0,1}+u_{1,0} \\
+\hline P_{14} & 4 U_{14}-U_{15}-U_{13}-U_{10}=-h^{2} q_{2,1}+u_{2,0} \\
+\hline P_{15} & 4 U_{15}-U_{16}-U_{14}-U_{11}=-h^{2} q_{3,1}+u_{3,0} \\
+\hline P_{16} & 4 U_{16}-U_{14}-U_{12}=-h^{2} q_{4,1}+u_{5,1}+u_{4,0} \\
+\hline
+\end{array}
+$$
+
 
 
 \begin{center}
@@ -2918,7 +2981,7 @@ C=&-h^{2} Q+[L(5)+T(2)\\
 $$
 Based on the above development, the following code will find the associated finite difference solution and create a surface plot of it.
 \end{multicols}
-
+\newpage
 \begin{lstlisting}[frame=none, numbers=none]
 %EFR11_4 
 %Script for solving the Poisson problem of EFR 11_4a 
@@ -3461,9 +3524,29 @@ $$
 4 U_{20 n+i}-\underset{\left\{=U_{20 n+i-1}+i f i=20\right)}{U_{20 n+1}}-U_{\{=100 i j} U_{i=1)}-U_{20(n+1)+i}-U_{20(n-1)+i}=0 .
 $$
 The resulting linear system $A U=C$ is specified by the following $M \times M(M=20)$ block matrices:
-\begin{center}
-\includegraphics{fig26}
-\end{center}
+
+
+
+$$
+A=\left[\begin{array}{c|c|c|c|cc|c}
+V_{N} & -2 I_{N} & 0_{N} & \cdots & & \cdots & 0_{N} \\
+\hline-I_{N} & V_{N} & -I_{N} & 0_{N} & & & \vdots \\
+\hline 0_{N} & -I_{N} & V_{N} & -I_{N} & & & \\
+\hline \vdots & 0_{N} & -I_{N} & V_{N} & \ddots & & \vdots \\
+\hline \vdots & & \ddots & \ddots & \ddots & \ddots & 0_{N} \\
+\hline 0_{N} & \cdots & & \cdots & 0_{N} & -I_{N} & V_{N}
+\end{array}\right], \quad U=\left[\begin{array}{c}
+w+v \\
+\hline w \\
+\hline w \\
+\hline w \\
+\hline \vdots \\
+\hline \vdots \\
+\hdashline w
+\end{array}\right]
+$$
+
+
 
 where $V_{N}$ is the same matrix as $W_{N}$ of $(42)$, except that the $(1,2)$ entry should be changed from $-2$ to $-1$, and $N=20$. Also, $w=\left[\begin{array}{lllll}100 & 0 & 0 & \cdots & 0\end{array}\right]^{\prime}$ and $v=\left[\begin{array}{lllll}2 & 2 & 2 & \cdots & 2\end{array}\right]^{\prime}$ into a MATLAB session, the system can be solved and one can obtain plots like those given in the text.
 
