--- a/ch2/ch2.tex
+++ b/ch2/ch2.tex
@@ -91,7 +91,7 @@ $$
 p(x)=a_{n} x^{n}+\cdots+a_{2} x^{2}+a_{1} x+a_{0},
 $$
 where $a_{n}, \cdots a_{2}, a_{1}, a_{0}$ are any real numbers. If $a_{n} \neq 0$, then we say that the degree of $p(x)$ equals $n$. Taylor's theorem from calculus shows how to use polynomials to approximate a great many mathematical functions to any degree of accuracy. In Section 2.2, we will introduce the special kind of polynomial (called Taylor polynomials) that gets used in this theorem and in Section $2.3$ we discuss the theorem and its uses.\\
-ś
+
 \hrule width \hsize \kern 1pt \hrule width \hsize height 0.4pt
 
 \hspace{0.1cm}
@@ -308,11 +308,32 @@ Thus to keep the $x$-range the same $[-10,10]$, but to change the $y$-range to b
 
 We can see now from the second plot above that (certainly) for $-3 \leq x \leq 3$ we have $\left|\cos (x)-p_{8}(x)\right| \leq 0.2$. This graph is, however, unsatisfactory in regards to the second question of the determination of an $x$-interval for which $\left|\cos (x)-p_{8}(x)\right| \leq 0.001$. To answer this latter question and also to get a more satisfactory answer for the first question, we need only look at plots of the actual error $y=\left|\cos (x)-p_{8}(x)\right|$. We do this for two different $y$-ranges. There is a nice way to get MATLAB to partition its plot window into several (in fact, a matrix of) smaller subwindows.
 
-\includegraphics[max width=\textwidth]{tab17}
+$
+\begin{array}{|l|l|}
+\hline \begin{array}{l}
+\text {subplot(m,n,i) } \rightarrow \\
+\end{array} & \begin{array}{l}
+\text {Causes the plot window to partition into an m x n matrix of } \\
+\text {proportionally smaller subwindows, with the next plot going into }\\
+\text {the ith subwindow (listed in the usual "reading order" -- left to right,  }\\
+\text{ then top to bottom)}\\
+
+\end{array} \\
+\hline
+\end{array}
+$\\
+
+
 
 The two error plots in Figure $2.3$ were obtained with the following commands:
 
-\includegraphics[max width=\textwidth]{code23}
+\begin{lstlisting}[numbers=none]
+>> subplot(2,1,1) 
+>>plot(x,abs(y-p8)) , axis([-10 10 -.1 .3]) 
+>>subplot(2,1,2) 
+>> plot(x,abs(y-p8)) , axis([- 5 5 -.000 5 .0015])
+\end{lstlisting}
+
 
 Notice that the ranges for the axes were appropriately set for each plot so as to make each more suitable to answer each of the corresponding questions.
 
